--- a/product-service-dev.yaml
+++ b/product-service-dev.yaml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${EUREKA_SERVER_URI:http://localhost:8761/eureka}
 spring:
   data:
     mongodb:
