--- a/payment-service.yaml
+++ b/payment-service.yaml
@@ -7,4 +7,5 @@ management:
 stripe:
   secret: ${STRIPE_SECRET}
   webhookSecret: ${STRIPE_WEBHOOK_SECRET}
+webUrl: ${WEB_URL:http://localhost:4200}
 
