--- a/user-service.yaml
+++ b/user-service.yaml
@@ -1,9 +1,10 @@
 server:
   port: 8081
 management:
-  tracing:
-    sampling:
-      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
 jwt:
   secret: ${JWT_SECRET}
   expiration: 3600
