--- a/product-service.yaml
+++ b/product-service.yaml
@@ -1,6 +1,7 @@
 server:
   port: 8082
 management:
-  tracing:
-    sampling:
-      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
