--- a/order-service.yaml
+++ b/order-service.yaml
@@ -1,7 +1,8 @@
 server:
   port: 8084
 management:
-  tracing:
-    sampling:
-      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
 
