--- a/cart-service.yaml
+++ b/cart-service.yaml
@@ -1,6 +1,7 @@
 server:
   port: 8085
 management:
-  tracing:
-    sampling:
-      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
