--- a/api-gateway.yaml
+++ b/api-gateway.yaml
@@ -1,9 +1,10 @@
 server:
   port: 8080
 management:
-  tracing:
-    sampling:
-      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
 spring:
   cloud:
     gateway:
