--- a/user-service.yaml
+++ b/user-service.yaml
@@ -4,7 +4,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,prometheus
+        include: "prometheus"
 jwt:
   secret: ${JWT_SECRET}
   expiration: 3600
