--- a/api-gateway.yaml
+++ b/api-gateway.yaml
@@ -4,7 +4,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,prometheus
+        include: "health,info,prometheus"
 spring:
   cloud:
     gateway:
