--- a/api-gateway.yaml
+++ b/api-gateway.yaml
@@ -14,7 +14,7 @@ spring:
             - id: product-service
               uri: lb://product-service
               predicates:
-                - Path=/api/products/{*segment}
+                - Path=/api/products/**
               filters: 
                 - RewritePath=/api/products/?(?<segment>.*), /products/$\{segment}
             - id: user-service
