--- a/product-service.yaml
+++ b/product-service.yaml
@@ -5,3 +5,6 @@ management:
     web:
       exposure:
         include: health,info,prometheus
+springdoc:
+  api-docs:
+    path: /products/v3/api-docs
