--- a/order-service.yaml
+++ b/order-service.yaml
@@ -5,4 +5,8 @@ management:
     web:
       exposure:
         include: health,info,prometheus
+springdoc:
+  api-docs:
+    path: /orders/v3/api-docs
+        
 
