--- a/cart-service.yaml
+++ b/cart-service.yaml
@@ -5,3 +5,7 @@ management:
     web:
       exposure:
         include: health,info,prometheus
+
+springdoc:
+  api-docs:
+    path: /carts/v3/api-docs
